src/components/FlexLayout/style.css
.flex-layout {
  display: flex;
  min-height: fit-content;
  /* height: fit-content; */
  width: 100%;
  /* margin-bottom: px; */
}

.flex-layout-columns {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-left: 20px;
}

.flex-layout-rows {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-left: 10px;

}

.flex-layout-content > .recharts-responsive-container {
  min-height: fit-content;
  max-height: 250px;
}

/* .data-toggle-container {
  margin-left: 2px;
} */


@media screen and (max-width: 760px), (orientation: portrait) {
  
  .chart-container {
    height: 250px !important;
    padding: 0 !important;
  }
  .selector-w-legend {
    max-height: 300px;
  }
  .flex-layout-rows {
    width: 100% !important;
    height: fit-content !important;
    padding: 5px !important;
    border-color: transparent !important;
  }
  .flex-layout-content {
    height: fit-content !important;
    width: 100% !important;
    margin: 10px 0 10px 0 !important;
    padding-bottom: 0 !important;
  }
  .flex-layout {
    gap: 10px !important;
    height: fit-content !important;
    padding: 0 10px 20px 10px;
  }
  .selector-map-wrapper {
    height: 350px !important;
  }

  .flex-layout-content > .recharts-responsive-container {
   height: 250px !important;
  }

  .indicator-trend-wrapper {
    max-height: 100px !important;
    min-height: 80px !important;
  }

  .data-toggle-container {
    min-height: 60px;
  }

  .title-with-trend-data-toggler {
    padding-bottom: 0 !important;
  }

  .title-with-trend-data-toggler > h1 {
    font-size: 2rem !important;
    padding-bottom: 20px;
  }

  .detail-card-header {
    padding-bottom: 0 !important;
  }

  /* .compare-dropdown-container {} */


  /* .recharts-wrapper {
    height: 300px;
  } */
}

